# K-LEAK

./: .gitignore  AllocSite.cpp  AllocSite.h  CMakeLists.txt  CallGraph.cpp  CallGraph.h  Config.cpp  Config.h  DDG.cpp  DDG.h  GlobalState.cpp  GlobalState.h  InstLoc.cpp  InstLoc.h  MainAllocSite.cpp  MainPAT.cpp  Makefile  Object.cpp  Object.h  ParseIR.cpp  ParseIR.h  PointsTo.cpp  PointsTo.h  README.md  SCC.cpp  SCC.h  Utils.cpp  Utils.h  Visitor.cpp  Visitor.h
